--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body{
-    background: url(/img/background.jpg) no-repeat fixed center;
+    background: url(../img/background.jpg) no-repeat fixed center;
 }
 #titulo{
     font-size: 72px;
